--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,10 +46,20 @@ main {
     padding-right: 2vw;
     padding-top: 3vw;
     padding-bottom: 3vw;
-	font-size: 1.2rem;
+	font-size: 1.1rem;
     color: #111111;
     background-color: #f8feff;
     box-shadow: 0 0.3vw 0.5vw 0 rgba(0, 0, 0, .5);
+}
+
+.title {
+	font-size: 3.0rem;
+    background-color: #defaff;
+    box-shadow: 0 0.3vw 0.5vw 0 rgba(0, 0, 0, .5);
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
 }
 
 .block{
